added onlick test

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <input type="text" id="insert">
             </div>
             <div class="col-auto">
-                <button id="btn1" class="btn btn-primary">submit</button>
+                <button id="btnOne" class="btn btn-primary">submit</button>
             </div>
         </div>
         <div class="row" id="plan">
