finished ls display area

--- a/index.html
+++ b/index.html
@@ -50,35 +50,47 @@
         </div>
         <div class="row" id="plan">
             <div class="col-auto" id="timeSlot">10AM</div>
-            <div class="col-9">
+            <div class="col-auto">
                 <input type="text" id="insertTwo">
             </div>
+            <div class="col-7">
+                    <h5 id="displayTwo"></h5>
+                </div>
             <div class="col-auto">
                 <button class="btn btn-primary" id="btnTwo">submit</button>
             </div>
         </div>
         <div class="row" id="plan">
             <div class="col-auto" id="timeSlot">11AM</div>
-            <div class="col-9">
+            <div class="col-auto">
                 <input type="text" id="insertThree">
             </div>
+            <div class="col-7">
+                    <h5 id="displayThree"></h5>
+                </div>
             <div class="col-auto">
                     <button class="btn btn-primary" id="btnThree">submit</button>
             </div>
         </div>
         <div class="row" id="plan">
             <div class="col-auto" id="timeSlot">12PM</div>
-            <div class="col-9">
+            <div class="col-auto">
                 <input type="text" id="insertFour">
             </div>
+            <div class="col-7">
+                    <h5 id="displayFour"></h5>
+                </div>
             <div class="col-auto">
                     <button class="btn btn-primary" id="btnFour">submit</button>
             </div>
         </div>
         <div class="row" id="plan">
             <div class="col-auto" id="timeSlot">1PM</div>
-            <div class="col-9">
+            <div class="col-auto">
                 <input type="text" id="insertFive">
+            </div>
+            <div class="col-7">
+                    <h5 id="displayFive"></h5>
             </div>
             <div class="col-auto">
                     <button class="btn btn-primary" id="btnFive">submit</button>
@@ -86,36 +98,48 @@
         </div>
         <div class="row" id="plan">
             <div class="col-auto" id="timeSlot">2PM</div>
-            <div class="col-9">
+            <div class="col-auto">
                 <input type="text" id="insertSix">
             </div>
+            <div class="col-7">
+                    <h5 id="displaySix"></h5>
+                </div>
             <div class="col-auto">
                     <button class="btn btn-primary" id="btnSix">submit</button>
             </div>
         </div>
         <div class="row" id="plan">
             <div class="col-auto" id="timeSlot">3PM</div>
-            <div class="col-9">
+            <div class="col-auto">
                 <input type="text" id="insertSeven">
             </div>
+            <div class="col-7">
+                    <h5 id="displaySeven"></h5>
+                </div>
             <div class="col-auto">
                     <button class="btn btn-primary" id="btnSeven">submit</button>
             </div>
         </div>
         <div class="row" id="plan">
             <div class="col-auto" id="timeSlot">4PM</div>
-            <div class="col-9">
+            <div class="col-auto">
                 <input type="text" id="insertEight">
             </div>
+            <div class="col-7">
+                    <h5 id="displayEight"></h5>
+                </div>
             <div class="col-auto">
                     <button class="btn btn-primary" id="btnEight">submit</button>
             </div>
         </div>
         <div class="row" id="plan">
             <div class="col-auto" id="timeSlot">5PM</div>
-            <div class="col-9">
+            <div class="col-auto">
                 <input type="text" id="insertNine">
             </div>
+            <div class="col-7">
+                    <h5 id="displayNine"></h5>
+                </div>
             <div class="col-auto">
                     <button class="btn btn-primary" id="btnNine">submit</button>
             </div>
