added styles to display area of ls

--- a/index.html
+++ b/index.html
@@ -1,28 +1,33 @@
 <!doctype html>
 <html lang="en">
-  <head>
+
+<head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="./ASSETS/style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="./script.js"></script>
+    
 
     <title>Day Planner</title>
-  </head>
-  <body>
+</head>
+
+<body>
     <div class="container mb-5">
         <div class="row justify-content-md-center">
-            <div class="col-auto" >
+            <div class="col-auto">
                 <h1>Work Day Planner</h1>
             </div>
         </div>
         <div class="row justify-content-md-center">
             <div class="col-auto">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum est maxime at inventore dolores in quod. Est beatae quas, quibusdam quasi hic voluptas sit, voluptatibus, officia consequuntur atque odit! Omnis.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum est maxime at inventore dolores in
+                    quod. Est beatae quas, quibusdam quasi hic voluptas sit, voluptatibus, officia consequuntur atque
+                    odit! Omnis.</p>
             </div>
         </div>
         <div class="row justify-content-md-center">
@@ -37,7 +42,9 @@
 
     <div class="container-planner mt-5 ml-5 mr-5">
         <div class="row" id="plan">
-            <div class="col-auto" id="timeSlot"><p class="time">9AM</p></div>
+            <div class="col-auto" id="timeSlot">
+                <p class="time">9AM</p>
+            </div>
             <div class="col-auto">
                 <input type="text" id="insert">
             </div>
@@ -54,8 +61,8 @@
                 <input type="text" id="insertTwo">
             </div>
             <div class="col-7">
-                    <h5 id="displayTwo"></h5>
-                </div>
+                <h5 id="displayTwo"></h5>
+            </div>
             <div class="col-auto">
                 <button class="btn btn-primary" id="btnTwo">submit</button>
             </div>
@@ -66,10 +73,10 @@
                 <input type="text" id="insertThree">
             </div>
             <div class="col-7">
-                    <h5 id="displayThree"></h5>
-                </div>
+                <h5 id="displayThree"></h5>
+            </div>
             <div class="col-auto">
-                    <button class="btn btn-primary" id="btnThree">submit</button>
+                <button class="btn btn-primary" id="btnThree">submit</button>
             </div>
         </div>
         <div class="row" id="plan">
@@ -78,10 +85,10 @@
                 <input type="text" id="insertFour">
             </div>
             <div class="col-7">
-                    <h5 id="displayFour"></h5>
-                </div>
+                <h5 id="displayFour"></h5>
+            </div>
             <div class="col-auto">
-                    <button class="btn btn-primary" id="btnFour">submit</button>
+                <button class="btn btn-primary" id="btnFour">submit</button>
             </div>
         </div>
         <div class="row" id="plan">
@@ -90,10 +97,10 @@
                 <input type="text" id="insertFive">
             </div>
             <div class="col-7">
-                    <h5 id="displayFive"></h5>
+                <h5 id="displayFive"></h5>
             </div>
             <div class="col-auto">
-                    <button class="btn btn-primary" id="btnFive">submit</button>
+                <button class="btn btn-primary" id="btnFive">submit</button>
             </div>
         </div>
         <div class="row" id="plan">
@@ -102,10 +109,10 @@
                 <input type="text" id="insertSix">
             </div>
             <div class="col-7">
-                    <h5 id="displaySix"></h5>
-                </div>
+                <h5 id="displaySix"></h5>
+            </div>
             <div class="col-auto">
-                    <button class="btn btn-primary" id="btnSix">submit</button>
+                <button class="btn btn-primary" id="btnSix">submit</button>
             </div>
         </div>
         <div class="row" id="plan">
@@ -114,10 +121,10 @@
                 <input type="text" id="insertSeven">
             </div>
             <div class="col-7">
-                    <h5 id="displaySeven"></h5>
-                </div>
+                <h5 id="displaySeven"></h5>
+            </div>
             <div class="col-auto">
-                    <button class="btn btn-primary" id="btnSeven">submit</button>
+                <button class="btn btn-primary" id="btnSeven">submit</button>
             </div>
         </div>
         <div class="row" id="plan">
@@ -126,10 +133,10 @@
                 <input type="text" id="insertEight">
             </div>
             <div class="col-7">
-                    <h5 id="displayEight"></h5>
-                </div>
+                <h5 id="displayEight"></h5>
+            </div>
             <div class="col-auto">
-                    <button class="btn btn-primary" id="btnEight">submit</button>
+                <button class="btn btn-primary" id="btnEight">submit</button>
             </div>
         </div>
         <div class="row" id="plan">
@@ -138,21 +145,28 @@
                 <input type="text" id="insertNine">
             </div>
             <div class="col-7">
-                    <h5 id="displayNine"></h5>
-                </div>
+                <h5 id="displayNine"></h5>
+            </div>
             <div class="col-auto">
-                    <button class="btn btn-primary" id="btnNine">submit</button>
+                <button class="btn btn-primary" id="btnNine">submit</button>
             </div>
         </div>
 
 
     </div>
-    
+
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="./ASSETS/script.js"></script>
     <script src="./ASSETS/LIB/Moment/moment.js"></script>
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-  </body>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
+</body>
