added comments to files

--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="./ASSETS/style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    
+
 
     <title>Day Planner</title>
 </head>
-
+<!--Start of header display that contains time and date-->
 <body>
     <div class="container mb-5">
         <div class="row justify-content-md-center">
@@ -38,8 +38,9 @@
         </div>
     </div>
     <div class="border-div"></div>
+<!--end-->
 
-
+<!--planner section-->
     <div class="container-planner mt-5 ml-5 mr-5">
         <div class="row" id="plan">
             <div class="col-auto" id="timeSlot">
